--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.5.7",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "5.0.1",
     "redux": "^3.7.2",
